language depend in property

--- a/src/main/resources/ucoin.properties
+++ b/src/main/resources/ucoin.properties
@@ -1,1 +1,12 @@
-link=https://en.ucoin.net
+enableLoadingCountriesList=try
+
+
+linken=https://en.ucoin.net
+linkru=https://ru.ucoin.net
+linkfr=https://fr.ucoin.net
+
+countriesListen=/src/main/resources/SearcherInformation/countryListEn.txt
+countriesListru=/src/main/resources/SearcherInformation/countryListRu.txt
+countriesListfr=/src/main/resources/SearcherInformation/countryListFr.txt
+
+existLang=en,ru,fr
