--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Server of NumismaticApp</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.version>3.1.4.RELEASE</spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +47,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -54,6 +56,16 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.6.6</version>
 		</dependency>
 
 	</dependencies>
