--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			
+		</dependency>
 
 			<dependency>
 		<groupId>com.google.code.gson</groupId>
